# aml

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: vorbereitung.ipynb
notebooks/part_1/: torch_CNN.py  torch_DNN.py  torch_SGD.py  torch_classification.py  torch_eval.py  torch_gradient_descent.py  torch_linear.py  torch_loss.py  torch_tensor.py  transformer_teaser.py
notebooks/part_2/: question_answering.ipynb  text_classification_trainer.ipynb  transformers_basics.ipynb
notebooks/part_3/: bertopic.ipynb  fastapi_demo.py  ollama_requests.py  search.ipynb  setfit.ipynb
src/aml/datasets/: kurswahlen.txt  podcasts.txt
src/aml/util/: load_arctic_m.py
src/aml/util/gte/: __init__.py  gte_config.py  gte_modeling.py
