[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aml"
version = "0.0.1"
dependencies = [
  "beautifulsoup4",
  "fastapi",
  "ipywidgets",
  "ipykernel",
  "uvicorn",
  "pandas",
  "polars",
  "sentence-transformers",
  "setfit",
  "datasets<4.0.0",
]
authors = [
  {name="Tryner"},
]
description = ""
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]